--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1096,7 +1096,7 @@ editor vim
 #: Use the traditional full-screen transition, that is faster, but
 #: less pretty.
 
-macos_show_window_title_in none
+macos_show_window_title_in all
 
 #: Show or hide the window title in the macOS window or menu-bar. A
 #: value of window will show the title of the currently active window
