--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
 
-set -g @catppuccin_flavour 'mocha'
+set -g @catppuccin_flavour 'Mocha'
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -9,6 +9,10 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-open'
+# set -g @plugin 'thesast/tmux-transient-status'
+set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
@@ -112,6 +116,8 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 # bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
+
+set-option -ga terminal-features ",wezterm:usstyle"
 
 
 run '~/.tmux/plugins/tpm/tpm'
