--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,7 +11,7 @@ set-option -g renumber-windows on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
-# set -g @plugin 'thesast/tmux-transient-status'
+set -g @plugin 'thesast/tmux-transient-status'
 set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -20,6 +20,9 @@ set -g @plugin 'ChanderG/tmux-notify'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
+
+set -g @transient-status-delay '0.5'
+set -g @transient-status-stall '1.5'
 
 set-option -g mouse on
 set -g @tnotify-verbose 'on'
