--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,6 +8,9 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+set -gq allow-passthrough on
+set -g visual-activity off
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
