updating .config, adding hammerspoon, and updating kitty config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -25,12 +25,13 @@ shell_integration disabled
 #: families that have many weight variants like Book, Medium, Thick,
 #: etc. For example::
 
-font_family Monaco 
+font_family Roboto Mono Regular 
+# font_family Operator Mono Medium
 #:     bold_font        Operator Mono Medium
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 13.5
+font_size 15
 
 #: Font size (in pts)
 
@@ -913,7 +914,7 @@ background_opacity 1.0
 #: --login and --interactive to ensure that the shell starts in
 #: interactive mode and reads its startup rc files.
 
-editor vim
+editor nvim
 
 #: The terminal editor (such as ``vim`` or ``nano``) to use when
 #: editing the kitty config file or similar tasks.
