--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,7 +5,7 @@ map alt+right send_text all \x1b\x66
 
 bindkey "\e[1;3D" backward-word # ⌥←
 bindkey "\e[1;3C" forward-word # ⌥→
-shell_integration disabled
+shell_integration enabled
 
 #: Fonts {{{
 
@@ -25,7 +25,7 @@ shell_integration disabled
 #: families that have many weight variants like Book, Medium, Thick,
 #: etc. For example::
 
-font_family Roboto Mono Regular 
+font_family Roboto Mono 
 # font_family Operator Mono Medium
 #:     bold_font        Operator Mono Medium
 #:     italic_font      Operator Mono Book Italic
@@ -591,8 +591,7 @@ strip_trailing_spaces always
  
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
-
- inactive_border_color #FF0000
+# inactive_border_color #FF0000
 
 #: The color for the border of inactive windows
 
@@ -760,8 +759,7 @@ hide_window_decorations yes
 #: }}}
 
 #: Color scheme {{{
-
-foreground #ffffff
+# foreground #FFFFFF
 # background #000000
 
 #: The foreground and background colors
@@ -1085,7 +1083,7 @@ editor nvim
 #: resizable on macOS. Changing this setting by reloading the config
 #: will only affect newly created windows.
 
- macos_thicken_font 0.40
+ #: macos_thicken_font 0.40
 
 #: Draw an extra border around the font with the given width, to
 #: increase legibility at small font sizes. For example, a value of
@@ -1522,7 +1520,7 @@ map kitty_mod+h         show_scrollback
 # Default
 include current-theme.conf
 # END_KITTY_THEME
-include /Users/katob/.confi1/kitty/colors.conf
+include /Users/katob/.config/kitty/colors.conf
 
 
 # should be able to change the position of the underline
