--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -97,7 +97,7 @@ set-window-option -g monitor-activity on   # highlights the window name in the s
 
 # Set the default terminal mode to 256color mode
 set -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -sa terminal-overrides ",xterm-kitty:RGB"
 
 # Command / Message line
 set-window-option -g message-style fg=black,bold,bg=colour11
