--- a/i3/config
+++ b/i3/config
@@ -20,20 +20,21 @@ bindsym Control+space exec --no-startup-id /home/kman/Documents/scripts/toggle_k
 for_window [class="^.*"] border pixel 1
 
 #Set gaps
-gaps inner 10
-gaps outer 10
+gaps inner 8
+gaps outer 8
 
 # Allows you to use ctrl+v to paste instead of using the shift button
 bindsym --release Control+v exec --no-startup-id xdotool key Control+Shift+v
 
 # allows you to take a screenshot of a certain path
-bindsym --release Control+$mod1+4 exec --no-startup-id scrot --select --line mode=edge -e 'xclip -selection clipboard -t image/png -i $f'
+bindsym --release Control+$mod+4 exec --no-startup-id /home/kman/Documents/scripts/screenshot.sh
+
 
 #To open firefox
 bindsym $mod+Shift+F exec --no-startup-id firefox
 
 #to lock screen
-exec --no-startup-id xidlehook --not-when-audio --timer 300 "systemctl suspend" "" &
+exec --no-startup-id xidlehook --not-when-audio --timer 600 "systemctl suspend" "" &
 
 #make sure to detect display
 bindsym --release Control+x exec --no-startup-id /home/kman/.xprofile
@@ -60,11 +61,11 @@ bindsym Control+backslash exec --no-startup-id /home/kman/Documents/scripts/resi
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:Hack Nerd 13
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+# font pango:Hack Nerd 10
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
