--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,4 @@
-set-option -sa terminal-overrides ",xterm*:Tc"
+# set-option -sa terminal-overrides ",xterm*:Tc"
 
 set -g @catppuccin_flavour 'Mocha'
 
@@ -7,6 +7,10 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+
+set -g set-clipboard on
+setw -g mode-keys vi
+
 
 set -gq allow-passthrough on
 set -g visual-activity off
@@ -96,8 +100,8 @@ set-window-option -g monitor-activity on   # highlights the window name in the s
 
 
 # Set the default terminal mode to 256color mode
-set -g default-terminal "screen-256color"
-set-option -sa terminal-overrides ",xterm-kitty:RGB"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 # Command / Message line
 set-window-option -g message-style fg=black,bold,bg=colour11
@@ -123,7 +127,8 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 # bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
-set-option -ga terminal-features ",wezterm:usstyle"
+set -g update-environment 'DISPLAY TERM XAUTHORITY WINDOWID'
 
 
-run '~/.tmux/plugins/tpm/tpm'
+
+run '/usr/share/tmux-plugin-manager/tpm'
