adding hurl to my nvim config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -25,13 +25,14 @@ shell_integration enabled
 #: families that have many weight variants like Book, Medium, Thick,
 #: etc. For example::
 
-font_family Roboto Mono 
+font_family JetBrains Hack Mono 
+# font_family MesloLGM Nerd Font Mono 
 # font_family Operator Mono Medium
 #:     bold_font        Operator Mono Medium
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 15
+font_size 13
 
 #: Font size (in pts)
 
