--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -25,7 +25,7 @@ shell_integration enabled
 #: families that have many weight variants like Book, Medium, Thick,
 #: etc. For example::
 
-font_family Roboto Mono 
+font_family Roboto Mono Medium
 # font_family Operator Mono Medium
 #:     bold_font        Operator Mono Medium
 #:     italic_font      Operator Mono Book Italic
@@ -912,7 +912,7 @@ background_opacity 1.0
 #: --login and --interactive to ensure that the shell starts in
 #: interactive mode and reads its startup rc files.
 
-editor nvim
+editor vim
 
 #: The terminal editor (such as ``vim`` or ``nano``) to use when
 #: editing the kitty config file or similar tasks.
