updating some small changes from macos

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,9 +21,9 @@ set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'thesast/tmux-transient-status'
 set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'ChanderG/tmux-notify'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'ChanderG/tmux-notify'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -39,17 +39,13 @@ set -g @continuum-restore 'on'
 set -g prefix C-a
 
 # tmux-resurrect settings
-set -g @resurrect-processes '~nvim'
+# set -g @resurrect-processes '~nvim'
 
 # Remove the old prefix
 unbind C-b
 
 # Send Ctrl+a to applications by pressing it twice
 bind C-a send-prefix
-
-#set -g pane-border-status top
-#set -g pane-border-lines heavy
-#set -g pane-border-format " #W #{session_path} "
 
 unbind r
 bind r source-file ~/.tmux.conf \; display "Config Reloaded !"
@@ -84,24 +80,9 @@ set-window-option -g window-status-current-style fg=black,bold,bg=colour111
 set-window-option -g window-status-last-style fg=black,bold,bg=colour111
 set-window-option -g window-status-separator |
 
-# Left Side
-# Show my active session, window, pane name or id  
-# set-option -g status-left-length 50   # default 10
-# set-option -g status-left "[ #[fg=white]S: #S, #[fg=colour62]W #I-#W, #[fg=colour3]P: #P #[fg=white]]"
-# set-option -g status-left-style
-
-# Right Side
-# set-option -g status-right-length 150   # default 50
-# set-option -g status-right '#[fg=grey,dim,bg=default] memory: #(/usr/local/bin/tmux-mem --format "[#[fg=grey,dim,bg=default]:spark#[fg=grey,dim,bg=default]] #[fg=grey,dim,bg=default]:percent#[fg=grey,dim,bg=default]") cpu: #(/usr/local/bin/tmux-cpu --format "[#[fg=grey,dim,bg=default]:spark#[fg=grey,dim,bg=default]] #[fg=grey,dim,bg=default]:percent#[fg=grey,dim,bg=default]") %d-%b-%y'
-
-# Enable Activity Alerts
-set-option -g status-interval 60           # Update the status line every 60 seconds (15 is default)
-set-window-option -g monitor-activity on   # highlights the window name in the status line
-
-
 # Set the default terminal mode to 256color mode
-set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+set -g default-terminal "xterm-256color"
+# set -ag terminal-overrides ",xterm-256color:RGB"
 
 # Command / Message line
 set-window-option -g message-style fg=black,bold,bg=colour11
@@ -127,8 +108,5 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 # bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
-set -g update-environment 'DISPLAY TERM XAUTHORITY WINDOWID'
-
-
-
-run '/usr/share/tmux-plugin-manager/tpm'
+# set -g update-environment 'DISPLAY TERM XAUTHORITY WINDOWID'
+run '~/.config/tmux/tpm.sh'
