--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,11 +6,16 @@ set -g @catppuccin_flavour 'Mocha'
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
-set-option -g renumber-windows on
 
 set -g set-clipboard on
 setw -g mode-keys vi
 
+# bind -r C-o run-shell "/home/kman/.config/tmux/tmux-sessionizer.sh"
+bind-key o send-keys "/home/kman/.config/tmux/tmux-sessionizer.sh" C-m
+bind-key w send-keys "tms windows" C-m
+bind-key s send-keys "tms switch" C-m
+bind-key x send-keys "tms kill" C-m
+bind-key r send-keys "run-shell 'tms refresh'" C-m
 
 set -gq allow-passthrough on
 set -g visual-activity off
@@ -18,7 +23,7 @@ set -g visual-activity off
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'thesast/tmux-transient-status'
+# set -g @plugin 'thesast/tmux-transient-status'
 set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -28,8 +33,8 @@ set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-set -g @transient-status-delay '0.5'
-set -g @transient-status-stall '1.5'
+# set -g @transient-status-delay '0.5'
+# set -g @transient-status-stall '1.5'
 
 set-option -g mouse on
 set -g @tnotify-verbose 'on'
@@ -47,14 +52,9 @@ unbind C-b
 # Send Ctrl+a to applications by pressing it twice
 bind C-a send-prefix
 
-unbind r
-bind r source-file ~/.tmux.conf \; display "Config Reloaded !"
+unbind R
+bind R source-file ~/.tmux.conf \; display "Config Reloaded !"
 
-set -g base-index 1
-setw -g pane-base-index 1
-set -g status-fg yellow
-set -g status-bg black
-set -g renumber-windows on
 
 set-option -g focus-events on
 set-option -sg escape-time 10
@@ -64,28 +64,20 @@ set-option -g history-limit 50000          # maximum number of lines held in win
 set-option -g lock-after-time 3600         # lock the session after 60 mins of inactivity. Sometimes, it is good to protect your screen to make sure other's can't see enough.
 set-option -wg automatic-rename off        # default names are too vague to see. Let me name it.
 
-#bind Space last-window
-
-
-
-bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
-bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
-
-
 # Status Bar
-set-option -g status-style fg=white,bg=colour100
-set-option -g status-justify centre
-set-window-option -g window-status-style fg=colour118,bg=colour044
-set-window-option -g window-status-current-style fg=black,bold,bg=colour111
-set-window-option -g window-status-last-style fg=black,bold,bg=colour111
-set-window-option -g window-status-separator |
+set-option -g status-style bg=default
+set -g status-fg grey
+set -g status-right ""
+set -g window-status-current-format ''
+set -g window-status-format ''
+set -g renumber-windows on
 
 # Set the default terminal mode to 256color mode
 set -g default-terminal "xterm-256color"
 # set -ag terminal-overrides ",xterm-256color:RGB"
 
-# Command / Message line
-set-window-option -g message-style fg=black,bold,bg=colour11
+set -g status-left-length 40
+set -g status-left "#S "
 
 
 # Smart pane switching with awareness of Vim splits.
