--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,6 +12,7 @@ setw -g mode-keys vi
 
 # bind -r C-o run-shell "/home/kman/.config/tmux/tmux-sessionizer.sh"
 bind-key o send-keys "/home/kman/.config/tmux/tmux-sessionizer.sh" C-m
+bind-key i send-keys "/home/kman/.config/tmux/change-directory.sh" C-m
 bind-key w send-keys "tms windows" C-m
 bind-key s send-keys "tms switch" C-m
 bind-key x send-keys "tms kill" C-m
