--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,10 +13,10 @@ setw -g mode-keys vi
 # bind -r C-o run-shell "/home/kman/.config/tmux/tmux-sessionizer.sh"
 bind-key o send-keys "/home/kman/.config/tmux/tmux-sessionizer.sh" C-m
 bind-key i send-keys "/home/kman/.config/tmux/change-directory.sh" C-m
-bind-key w send-keys "tms windows" C-m
-bind-key s send-keys "tms switch" C-m
-bind-key x send-keys "tms kill" C-m
-bind-key r send-keys "run-shell 'tms refresh'" C-m
+
+bind-key Z split-window "bash -i -c 'ollama run codellama \"how to set a variable in golang\"; read -p \"Press Enter to close...\"'"
+# bind-key Z split-window "echo 'Testing split-window'"
+
 
 set -gq allow-passthrough on
 set -g visual-activity off
@@ -42,16 +42,19 @@ set -g @tnotify-verbose 'on'
 set -g @continuum-restore 'on'
 
 # Set the prefix to Ctrl+a
-set -g prefix C-a
+# set -g prefix C-a
 
 # tmux-resurrect settings
 # set -g @resurrect-processes '~nvim'
 
 # Remove the old prefix
+set -g prefix Home
 unbind C-b
+bind-key Home send-prefix
 
 # Send Ctrl+a to applications by pressing it twice
-bind C-a send-prefix
+# set-option -g prefix C-A-S-b
+# bind C-A-S-b send-prefix
 
 unbind R
 bind R source-file ~/.tmux.conf \; display "Config Reloaded !"
@@ -100,6 +103,8 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 # bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+
 
 # set -g update-environment 'DISPLAY TERM XAUTHORITY WINDOWID'
 run '~/.config/tmux/tpm.sh'
