reverting baco to c-a for prefix with tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -42,15 +42,15 @@ set -g @tnotify-verbose 'on'
 set -g @continuum-restore 'on'
 
 # Set the prefix to Ctrl+a
-# set -g prefix C-a
+set -g prefix C-a
 
 # tmux-resurrect settings
 # set -g @resurrect-processes '~nvim'
 
 # Remove the old prefix
-set -g prefix Home
+# set -g prefix C-a
 unbind C-b
-bind-key Home send-prefix
+bind-key C-a send-prefix
 
 # Send Ctrl+a to applications by pressing it twice
 # set-option -g prefix C-A-S-b
