--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -23,6 +23,10 @@
   cyan = '0x3971ed'
   white = '0xffffff'
 
+	[colors.cursor]
+	cursor = '#F2F2F2'
+	text = "CellBackground"
+
 [font]
 normal = { family = "Roboto Mono", style = "Normal" }
 bold = { family = "Roboto Mono", style = "Medium" }
@@ -30,5 +34,8 @@ size = 13.5
 
 [env]
 TERM = "xterm-256color"
+
+[cursor]
+style = { shape = "Block", blinking = "On" }
 
 ## Alacrity config
