minimizing tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,45 +1,17 @@
-# set-option -sa terminal-overrides ",xterm*:Tc"
-
-set -g @catppuccin_flavour 'Mocha'
-
-# Start windows and panes at 1, not 0
-set -g base-index 1
-set -g pane-base-index 1
-set-window-option -g pane-base-index 1
 
 set -g set-clipboard on
 setw -g mode-keys vi
-
-# bind -r C-o run-shell "/home/kman/.config/tmux/tmux-sessionizer.sh"
-bind-key o send-keys "/home/kman/.config/tmux/tmux-sessionizer.sh" C-m
-bind-key i send-keys "/home/kman/.config/tmux/change-directory.sh" C-m
-
-bind-key Z split-window "bash -i -c 'ollama run codellama \"how to set a variable in golang\"; read -p \"Press Enter to close...\"'"
-# bind-key Z split-window "echo 'Testing split-window'"
-
 
 set -gq allow-passthrough on
 set -g visual-activity off
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
-# set -g @plugin 'thesast/tmux-transient-status'
 set -g @plugin 'tmux-plugins/tmux-urlview'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
-# set -g @plugin 'tmux-plugins/tmux-continuum'
-# set -g @plugin 'ChanderG/tmux-notify'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-# set -g @transient-status-delay '0.5'
-# set -g @transient-status-stall '1.5'
-
 set-option -g mouse on
-set -g @tnotify-verbose 'on'
-set -g @continuum-restore 'on'
 
 # Set the prefix to Ctrl+a
 set -g prefix C-a
@@ -47,26 +19,16 @@ set -g prefix C-a
 # tmux-resurrect settings
 # set -g @resurrect-processes '~nvim'
 
-# Remove the old prefix
-# set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
-
-# Send Ctrl+a to applications by pressing it twice
-# set-option -g prefix C-A-S-b
-# bind C-A-S-b send-prefix
 
 unbind R
 bind R source-file ~/.tmux.conf \; display "Config Reloaded !"
 
-
 set-option -g focus-events on
-set-option -sg escape-time 10
-set-option -g display-time 2000            # By default, status msg disappears in the blink of an eye (750ms)
-set-option -g display-panes-time 2000      # By default, pane number disappears in 1 s
+set-option -sg escape-time 0
 set-option -g history-limit 50000          # maximum number of lines held in window history - crank it up from 2k default
-set-option -g lock-after-time 3600         # lock the session after 60 mins of inactivity. Sometimes, it is good to protect your screen to make sure other's can't see enough.
-set-option -wg automatic-rename off        # default names are too vague to see. Let me name it.
+set-option -g lock-after-time 1800         # lock the session after 60 mins of inactivity. Sometimes, it is good to protect your screen to make sure other's can't see enough.
 
 # Status Bar
 set-option -g status-style bg=default
@@ -78,25 +40,13 @@ set -g renumber-windows on
 
 # Set the default terminal mode to 256color mode
 set -g default-terminal "xterm-256color"
-# set -ag terminal-overrides ",xterm-256color:RGB"
 
 set -g status-left-length 40
 set -g status-left "#S "
 
-
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
-# bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+bind-key -n C-h select-pane -L
+bind-key -n C-j select-pane -D
+bind-key -n C-k select-pane -U
 
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
@@ -104,7 +54,6 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 # bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-
 
 # set -g update-environment 'DISPLAY TERM XAUTHORITY WINDOWID'
 run '~/.config/tmux/tpm.sh'
