--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,59 +1,42 @@
-
+# Enable clipboard and vi mode for copy-paste operations
 set -g set-clipboard on
 setw -g mode-keys vi
 
-set -gq allow-passthrough on
-set -g visual-activity off
-
+# Plugin management
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
+# Basic settings
 set-option -g mouse on
-
-# Set the prefix to Ctrl+a
 set -g prefix C-a
-
-# tmux-resurrect settings
-# set -g @resurrect-processes '~nvim'
-
 unbind C-b
-bind-key C-a send-prefix
+bind C-a send-prefix
+bind R source-file ~/.tmux.conf \; display "Config Reloaded!"
+set-option -g history-limit 50000
 
-unbind R
-bind R source-file ~/.tmux.conf \; display "Config Reloaded !"
-
-set-option -g focus-events on
-set-option -sg escape-time 0
-set-option -g history-limit 50000          # maximum number of lines held in window history - crank it up from 2k default
-set-option -g lock-after-time 1800         # lock the session after 60 mins of inactivity. Sometimes, it is good to protect your screen to make sure other's can't see enough.
-
-# Status Bar
+# Status Bar - simplified
 set-option -g status-style bg=default
-set -g status-fg grey
+set -g status-left "#S "
 set -g status-right ""
 set -g window-status-current-format ''
 set -g window-status-format ''
-set -g renumber-windows on
 
-# Set the default terminal mode to 256color mode
+# Default terminal mode
 set -g default-terminal "xterm-256color"
 
-set -g status-left-length 40
-set -g status-left "#S "
-
+# Pane navigation bindings using Ctrl+h/j/k
 bind-key -n C-h select-pane -L
 bind-key -n C-j select-pane -D
 bind-key -n C-k select-pane -U
 
+# Enhanced pane navigation in copy-mode
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
-# bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 
-# set -g update-environment 'DISPLAY TERM XAUTHORITY WINDOWID'
+# Initialize tmux plugin manager (assumes you have tpm installed)
 run '~/.config/tmux/tpm.sh'
