making small updated changes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,6 +11,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Basic settings
 set-option -g mouse on
+set -g @yank_selection_mouse 'clipboard'
+set -g cursor-color white
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
@@ -25,7 +27,9 @@ set -g window-status-current-format ''
 set -g window-status-format ''
 
 # Default terminal mode
-set -g default-terminal "xterm-256color"
+set -gs default-terminal "tmux-256color"
+set-option -gas terminal-overrides "*:Tc"
+set-option -gas terminal-overrides "*:RGB"
 
 # Pane navigation bindings using Ctrl+h/j/k
 bind-key -n C-h select-pane -L
