--- a/contour/contour.yml
+++ b/contour/contour.yml
@@ -111,7 +111,7 @@ mouse_block_selection_modifier: Control
 #                               This is not supported on all platforms.
 #
 # Default: CopyToSelectionClipboard
-on_mouse_select: CopyToSelectionClipboard
+# on_mouse_select: CopyToSelectionClipboard
 on_mouse_select: CopyToClipboard
 
 # Determines whether the instance is reloading the configuration files whenever it is changing or not.
@@ -243,7 +243,7 @@ profiles:
 
         # Environment variables to be passed to the shell.
         environment:
-            TERM: xterm-256color
+            TERM: tmux-256color
             COLORTERM: truecolor
 
         # Determines the terminal type that is being advertised.
@@ -576,7 +576,7 @@ color_schemes:
             # be covered otherwise.
             #
             # Default: CellBackground
-            text: 'white'
+            text: 'CellBackground'
 
         # color to pick for hyperlinks decoration, when hovering
         hyperlink_decoration:
