--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,9 +27,7 @@ set -g window-status-current-format ''
 set -g window-status-format ''
 
 # Default terminal mode
-set -gs default-terminal "tmux-256color"
-set-option -gas terminal-overrides "*:Tc"
-set-option -gas terminal-overrides "*:RGB"
+set -gs default-terminal "xterm-256color"
 
 # Pane navigation bindings using Ctrl+h/j/k
 bind-key -n C-h select-pane -L
