--- a/contour/contour.yml
+++ b/contour/contour.yml
@@ -206,7 +206,7 @@ profiles:
 
         # When this profile is *activated*, this flag decides
         # whether or not the size indicator on resize will be shown.
-        size_indicator_on_resize: true
+        size_indicator_on_resize: false
 
         # When this profile is being *activated*, this flag decides
         # whether or not to put the terminal's screen into fullscreen mode.
@@ -216,7 +216,7 @@ profiles:
 
         # When this profile is *activated*, this flag decides
         # whether or not to put the window into maximized mode.
-        maximized: false
+        maximized: true
 
         bell:
             # There is no sound for BEL character if set to "off".
@@ -501,7 +501,7 @@ profiles:
         background:
             # Background opacity to use. A value of 1.0 means fully opaque whereas 0.0 means fully
             # transparent. Only values between 0.0 and 1.0 are allowed.
-            opacity: 0.0
+            opacity: 1.0
             # Some platforms can blur the transparent background (currently only Windows 10 is supported).
             blur: false
 
