--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,6 +26,9 @@ set -g status-right ""
 set -g window-status-current-format ''
 set -g window-status-format ''
 
+set -gq allow-passthrough on
+set -g visual-activity off
+
 # Default terminal mode
 set -gs default-terminal "xterm-256color"
 
