updating on macos w

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -32,6 +32,10 @@ set -g visual-activity off
 # Default terminal mode
 set -gs default-terminal "xterm-256color"
 
+# Used for image.nvim. To be able to show images.
+set -gq allow-passthrough on
+set -g visual-activity off
+
 # Pane navigation bindings using Ctrl+h/j/k
 bind-key -n C-h select-pane -L
 bind-key -n C-j select-pane -D
