optmization update to improve performance

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -25,7 +25,7 @@ shell_integration enabled
 #: families that have many weight variants like Book, Medium, Thick,
 #: etc. For example::
 
-font_family FiraCode Nerd Font Regular
+font_family FiraCode Nerd Font Medium
 # font_family JetBrains Hack Mono 
 # font_family MesloLGM Nerd Font Mono 
 # font_family Operator Mono Medium
