--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -906,7 +906,7 @@ background_opacity 1
 
 #: Advanced {{{
 
-#: shell zsh
+shell zsh
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
