--- a/nix-config/common/linux/i3/config
+++ b/nix-config/common/linux/i3/config
@@ -66,7 +66,7 @@ bindsym Control+backslash exec --no-startup-id /home/katob/Documents/scripts/res
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Hack Nerd 14
+font pango:Input Sans Regular 13
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
