--- a/zen/profiles.ini
+++ b/zen/profiles.ini
@@ -1,3 +1,13 @@
+[InstallE00051C82B569C09]
+Default=Profiles/y8awlfye.Default (beta)
+Locked=1
+
+[Profile1]
+Name=Default (beta)
+IsRelative=1
+Path=Profiles/y8awlfye.Default (beta)
+ZenAvatarPath=chrome://browser/content/zen-avatars/avatar-19.svg
+
 [Profile0]
 Default=1
 IsRelative=1
@@ -12,3 +22,4 @@ Version=2
 [Install4A1B1A7ABB0FB87]
 Default=Profiles/main
 Locked=1
+
