adding frame16 and 13

--- a/nix-config/common/linux/i3/config
+++ b/nix-config/common/linux/i3/config
@@ -214,6 +214,15 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
+# Brightness size 
+set $brightness_size 2
+
+# Framework Laptop F7: XF86MonBrightnessDown
+# The --min-value option is important to prevent the complete darkness.
+bindsym XF86MonBrightnessDown exec "brightnessctl --device amdgpu_bl1 --min-value=1 set $brightness_size%-"
+# Framework Laptop F8: XF86MonBrightnessUp
+bindsym XF86MonBrightnessUp exec "brightnessctl --device amdgpu_bl1 set $brightness_size%+"
+
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
