--- a/nix-config/common/linux/i3/config
+++ b/nix-config/common/linux/i3/config
@@ -35,7 +35,7 @@ bindsym --release Control+$mod+4 exec --no-startup-id /home/katob/Documents/scri
 
 #To open firefox
 # bindsym $mod+Shift+F exec --no-startup-id firefox
-bindsym $mod+Shift+F exec --no-startup-id floorp
+bindsym $mod+Shift+F exec --no-startup-id zen
 
 #to lock screen
 exec --no-startup-id xidlehook --not-when-fullscreen --not-when-audio --timer 600 "systemctl suspend" "" &
@@ -62,11 +62,12 @@ bindsym Control+backslash exec --no-startup-id /home/katob/Documents/scripts/res
 # workspace 9 output DP-1-3.2
 # workspace 10 output DP-1-3.2
 
-
+# diables touchpad while typing
+exec --no-startup-id xinput set-prop "PIXA3854:00 093A:0274 Touchpad" "libinput Disable While Typing Enabled" 1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:ComicShannsMono Nerd Font Mono Regular 13
+font pango:ComicShannsMono Nerd Font Mono Regular 14
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
