updating configs on nvim nix and zed

--- a/zed/settings_backup.json
+++ b/zed/settings_backup.json
@@ -6,6 +6,7 @@
   "auto_install_extensions": {
     "ansible": true,
     "java": true,
+    "rust": true,
     "c": true,
     "go": true,
     "nix": true,
@@ -14,7 +15,7 @@
   },
   "features": {
     "copilot": false,
-    "inline_completion_provider": "none"
+    "edit_prediction_provider": "none"
   },
   "auto_update": false,
   "buffer_font_family": "ComicShannsMono Nerd Font Mono",
@@ -50,14 +51,11 @@
   },
   "relative_line_numbers": true,
   "terminal": {
-    "button": false,
-    "shell": {
-      "program": "/bin/sh"
-    }
+    "button": true,
   },
   "theme": {
     "mode": "dark",
-    "dark": "Alabaster",
+    "dark": "Alabaster Simple",
     "light": "One Light"
   },
   "use_autoclose": true,
@@ -67,7 +65,11 @@
   },
   "project_panel": {
     "git_status": true,
-    "button": false
+    "button": false,
+    "dock": "left",
+  },
+  "git_panel": {
+    "dock": "right"
   },
   "git": {
     "enabled": true,
@@ -133,6 +135,8 @@
         "scrollbar.track.border": "#2e333cff",
         "editor.foreground": "#FFFFFF",
         "editor.background": "#000000",
+        "search.match_background": "#39bae53d",
+        "editor.document_highlight.bracket_background": "#ffffff00",
         "editor.gutter.background": "#000000",
         "editor.subheader.background": "#2f343eff",
         "editor.active_line.background": "#2f343ebf",
@@ -235,6 +239,28 @@
     },
   },
   "lsp": {
+    "rust-analyzer": {
+      "initialization_options": {
+        // get more cargo-less diagnostics from rust-analyzer,
+        // which might include false-positives (those can be turned off by their names)
+        "diagnostics": {
+          "experimental": {
+            "enable": true
+          }
+        },
+        // To disable the checking entirely
+        // (ignores all cargo and check settings below)
+        "checkOnSave": false,
+        // To check the `lib` target only.
+        "cargo": {
+          "allTargets": false
+        },
+        // Use `-p` instead of `--workspace` for cargo check
+        "check": {
+          "workspace": false
+        }
+      }
+    },
     "jdtls": {
       "settings": {
         "java.format.enabled": true
