--- a/zed/settings.json
+++ b/zed/settings.json
@@ -26,7 +26,7 @@
   "notification_panel": {
     "button": false,
   },
-  "assistant": {
+  "agent": {
     "default_model": {
       "provider": "ollama",
       "model": "deepseek-r1:7b"
