--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -16,16 +16,16 @@ after-startup-command = []
 start-at-login = true
 
 # Normalizations. See: https://nikitabobko.github.io/AeroSpace/guide#normalization
-enable-normalization-flatten-containers = false
+enable-normalization-flatten-containers = true
 enable-normalization-opposite-orientation-for-nested-containers = false
 
 # See: https://nikitabobko.github.io/AeroSpace/guide#layouts
 # The 'accordion-padding' specifies the size of accordion padding
 # You can set 0 to disable the padding feature
-accordion-padding = 30
+accordion-padding = 10
 
 # Possible values: tiles|accordion
-default-root-container-layout = 'tiles'
+default-root-container-layout = 'accordion'
 
 # Possible values: horizontal|vertical|auto
 # 'auto' means: wide monitor (anything wider than high) gets horizontal orientation,
@@ -48,6 +48,12 @@ automatically-unhide-macos-hidden-apps = true
 # See https://nikitabobko.github.io/AeroSpace/guide#key-mapping
 [key-mapping]
     preset = 'qwerty'
+
+[workspace-to-monitor-force-assignment]
+    1 = 1
+    2 = 2
+    3 = 3
+    4 = 4
 
 # Gaps between windows (inner-*) and between monitor edges (outer-*).
 # Possible values:
@@ -91,7 +97,7 @@ automatically-unhide-macos-hidden-apps = true
     # You can uncomment the following lines to open up terminal with cmd + enter shortcut
     # (like in i3)
     cmd-enter = '''exec-and-forget osascript -e '
-    tell application "Ghostty"
+    tell application "net.kovidgoyal.kitty"
         do script
         activate
     end tell'
@@ -139,7 +145,7 @@ automatically-unhide-macos-hidden-apps = true
     cmd-shift-8 = 'move-node-to-workspace 8'
     cmd-shift-9 = 'move-node-to-workspace 9'
 
-    cmd-f = "fullscreen"
+    ctrl-alt-cmd-shift-f = "fullscreen"
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
     cmd-tab = 'workspace-back-and-forth'
